--- a/Index.html
+++ b/Index.html
@@ -1,46 +1,136 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bloc de Notas</title>
-    <!-- Agrega el enlace a Bootstrap CSS -->
-    <link rel="stylesheet" href="./app.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container mt-5">
-        <h1 class="display-4 text-center mb-4">Bloc de Notas</h1>
-        <div class="row">
-            <div class="col-md-6">
-                <!-- Botón para listar notas -->
-                <a href="#" class="btn btn-success mb-3">Listar Notas</a>
-                <a href="#" class="btn btn-danger mb-3">Eliminar </a>
-                <a href="#" class="btn btn-info mb-3">actualizar</a>
-                <a href="#" class="btn btn-warning mb-3">Buscar</a>
-            </div>
-            <!-- <div class="col-md-6"> -->
-                <!-- Botón para agregar nueva nota -->
-                <!-- <a href="#" class="btn btn-success mb-3">Agregar Nota</a> -->
-            <!-- </div> -->
-        <!-- </div> -->
-        <!-- Formulario para actualizar o eliminar nota -->
-        <form>
-            <div class="mb-3">
-                <label for="titulo" class="form-label">Título</label>
-                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
-            </div>
-            <div class="mb-3">
-                <label for="contenido" class="form-label">Contenido</label>
-                <textarea class="form-control" id="contenido" rows="4" placeholder="Contenido de la nota"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Guardar</button>
-            <!-- <button type="button" class="btn btn-danger">Eliminar Nota</button> -->
-        </form>
-    </div>
+    <link rel="stylesheet" href="./app.css">
 
-    <!-- Agrega el enlace a Bootstrap JS (opcional si necesitas funcionalidad adicional) -->
-    <script src="./app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    <div class="container">
+        <h4 class="text-dark text-center display-1">Bloc de Notas</h4>
+        <div class="row">
+            <div class="d-flex justify-content-end">
+                <button type="submit" class="btn btn-primary mb-4">Crear nota</button>
+            </div>
+        </div>
+        <div class="row justify-content-center">
+            <div class="col-md-12 d-flex">
+                <div class="col-md-2">
+                    <div class="d-grid mx-2">
+                        <button type="submit" class="btn btn-primary mb-4">Buscar</button>
+                    </div>
+                </div>
+                <div class="col-md-10 ">
+                    <form>
+                        <div>
+                            <input type="text" class="form-control" name="searchstring" placeholder="Buscar notas...">
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <form action="">
+                        <div class="card">
+                            <div class="card-body">
+                                <div>
+                                    <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
+                                </div>
+                                <div class="mb-3">
+                                    <label for="contenido" class="form-label">Contenido</label>
+                                    <textarea class="form-control" id="contenido" rows="4"
+                                        placeholder="Contenido de la nota"></textarea>
+                                        <label for="titulo" class="form-label">Fecha</label>
+                                        <input type="text" class="form-control" id="titulo" placeholder="fecha...">
+                                 </div>
+                                <div class="d-flex justify-content-center gap-2">
+                                    <button type="submit" class="btn btn-primary mb-2">Editar</button>
+                                    <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
+    
+                                </div>
+
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div>
+                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
+                            </div>
+                            <div class="mb-3">
+                                <label for="contenido" class="form-label">Contenido</label>
+                                <textarea class="form-control" id="contenido" rows="4"
+                                    placeholder="Contenido de la nota"></textarea>
+                                    <label for="titulo" class="form-label">Fecha</label>
+                                    <input type="text" class="form-control" id="titulo" placeholder="fecha...">
+                            </div>
+                            <div class="d-flex justify-content-center gap-2">
+                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
+                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div>
+                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
+                            </div>
+                            <div class="mb-3">
+                                <label for="contenido" class="form-label">Contenido</label>
+                                <textarea class="form-control" id="contenido" rows="4"
+                                    placeholder="Contenido de la nota"></textarea>
+                                <label for="titulo" class="form-label">Fecha</label>
+                                <input type="text" class="form-control" id="titulo" placeholder="fecha...">
+                            </div>
+                            <div class="d-flex justify-content-center gap-2">
+                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
+                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-body">
+                            <div>
+                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
+                            </div>
+                            <div class="mb-3">
+                                <label for="contenido" class="form-label">Contenido</label>
+                                <textarea class="form-control" id="contenido" rows="4"
+                                    placeholder="Contenido de la nota"></textarea>
+                                    <label for="titulo" class="form-label">Fecha</label>
+                                    <input type="text" class="form-control" id="titulo" placeholder="fecha...">
+                            </div>
+                            <div class="d-flex justify-content-center gap-2">
+                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
+                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div id="notas">
+
+                </div>
+            </div>
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="./app.js"></script>
 </body>
+
 </html>
