--- a/Index.html
+++ b/Index.html
@@ -12,17 +12,17 @@
 
 <body>
     <div class="container">
-        <h4 class="text-dark text-center display-1">Bloc de Notas</h4>
+        <p class="h1 text-dark text-center display-2 my-3">Listado De Notas</p>
         <div class="row">
             <div class="d-flex justify-content-end">
-                <button type="submit" class="btn btn-primary mb-4">Crear nota</button>
+                <button type="submit" class="btn btn-warning my-4">Crear Nota</button>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-12 d-flex">
                 <div class="col-md-2">
                     <div class="d-grid mx-2">
-                        <button type="submit" class="btn btn-primary mb-4">Buscar</button>
+                        <button type="submit" class="btn btn-primary">Buscar</button>
                     </div>
                 </div>
                 <div class="col-md-10 ">
@@ -33,104 +33,15 @@
                     </form>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <form action="">
-                        <div class="card">
-                            <div class="card-body">
-                                <div>
-                                    <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
-                                </div>
-                                <div class="mb-3">
-                                    <label for="contenido" class="form-label">Contenido</label>
-                                    <textarea class="form-control" id="contenido" rows="4"
-                                        placeholder="Contenido de la nota"></textarea>
-                                        <label for="titulo" class="form-label">Fecha</label>
-                                        <input type="text" class="form-control" id="titulo" placeholder="fecha...">
-                                 </div>
-                                <div class="d-flex justify-content-center gap-2">
-                                    <button type="submit" class="btn btn-primary mb-2">Editar</button>
-                                    <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
-    
-                                </div>
-
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div>
-                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
-                            </div>
-                            <div class="mb-3">
-                                <label for="contenido" class="form-label">Contenido</label>
-                                <textarea class="form-control" id="contenido" rows="4"
-                                    placeholder="Contenido de la nota"></textarea>
-                                    <label for="titulo" class="form-label">Fecha</label>
-                                    <input type="text" class="form-control" id="titulo" placeholder="fecha...">
-                            </div>
-                            <div class="d-flex justify-content-center gap-2">
-                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
-                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div>
-                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
-                            </div>
-                            <div class="mb-3">
-                                <label for="contenido" class="form-label">Contenido</label>
-                                <textarea class="form-control" id="contenido" rows="4"
-                                    placeholder="Contenido de la nota"></textarea>
-                                <label for="titulo" class="form-label">Fecha</label>
-                                <input type="text" class="form-control" id="titulo" placeholder="fecha...">
-                            </div>
-                            <div class="d-flex justify-content-center gap-2">
-                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
-                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="card">
-                        <div class="card-body">
-                            <div>
-                                <input type="text" class="form-control" id="titulo" placeholder="Título de la nota">
-                            </div>
-                            <div class="mb-3">
-                                <label for="contenido" class="form-label">Contenido</label>
-                                <textarea class="form-control" id="contenido" rows="4"
-                                    placeholder="Contenido de la nota"></textarea>
-                                    <label for="titulo" class="form-label">Fecha</label>
-                                    <input type="text" class="form-control" id="titulo" placeholder="fecha...">
-                            </div>
-                            <div class="d-flex justify-content-center gap-2">
-                                <button type="submit" class="btn btn-primary mb-2">Editar</button>
-                                <button type="submit" class="btn btn-danger mb-2">Eliminar</button>
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div id="notas">
-
-                </div>
+        </div>
+        <div class="row mt-3">
+            <div class="d-flex flex-wrap justify-content-center gap-3" id="notas">
+                //espacio donde se incrustan las notas desde el js
             </div>
         </div>
-
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./app.js"></script>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./app.js"></script>
 </body>
 
 </html>
