--- a/Index.html
+++ b/Index.html
@@ -29,7 +29,7 @@
                 <div class="col-md-10 ">
                     <form>
                         <div>
-                            <input type="search" class="form-control" name="searchString" placeholder="Buscar notas...">
+                            <input type="search" class="form-control" placeholder="Buscar notas..." id="nota">
                         </div>
                     </form>
                 </div>
