--- a/Actualizar.html
+++ b/Actualizar.html
@@ -38,7 +38,7 @@
                         <input type="hidden" id="id_edit">
                     </div>
                     <div class="d-grid mx-auto col-4 my-3">
-                        <button type="button" class="btn btn-success" onclick="actualizarNota()">
+                        <button type="submit" class="btn btn-success" onclick="actualizarNota()">
                             Guardar Nota
                         </button>
                     </div>
@@ -47,6 +47,6 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="./app.js"></script>
+    <script src="./app1.js"></script>
 </body>
 </html>
