--- a/Index.html
+++ b/Index.html
@@ -2,36 +2,29 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Listado de Notas</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./app.css" />
 </head>
 
 <body>
     <div class="container">
-        <p class="h1 text-dark fw-bold text-center display-2 my-4">Listado De Notas</p>
+        <p class="h1 text-dark fw-bold text-center display-2 my-4">
+            Listado De Notas
+        </p>
         <div class="row">
             <div class="d-flex justify-content-end">
                 <a href="./Crear.html">
-                    <button  class="btn btn-warning my-4">Crear Nota</button>
+                    <button class="btn btn-warning my-4">Crear Nota</button>
                 </a>
             </div>
         </div>
         <div class="row justify-content-center">
-            <div class="col-md-12 d-flex">
-                <div class="col-md-2">
-                    <div class="d-grid mx-2">
-                        <button type="submit" class="btn btn-primary">Buscar</button>
-                    </div>
-                </div>
-                <div class="col-md-10 ">
-                    <form>
-                        <div>
-                            <input type="search" class="form-control" placeholder="Buscar notas..." id="nota">
-                        </div>
-                    </form>
+            <div class="col-md-10 mb-2">
+                <div>
+                    <input type="text" class="form-control" onkeyup="buscarNota()" placeholder="Buscar notas..." id="search" />
                 </div>
             </div>
         </div>
